appId: com.ahmed_m.hunter
---
- assertVisible: 
- tapOn: 
- tapOn: Delete
- swipe:
    direction: DOWN