url: http://localhost:8081
---
- tapOn:
    id: email-input-field
- inputText: ${email}
- pressKey: Enter
- inputText: ${password}
- tapOn:
    id: "signin-btn"
- runFlow: add_entry.yaml
