url: http://localhost:8081
---
- assertVisible:
    id: "toggle-theme-btn"
- tapOn:
    id: "toggle-theme-btn"
    repeat: 3
    delay: 2000
- tapOn: 
- runFlow: signout.yml
